--- a/src/css/list.css
+++ b/src/css/list.css
@@ -1,20 +1,33 @@
 #wrap{width:100%;min-width: 1227px;margin: 0 auto;background-color: #fff;}
 
 #main{width:1220px;float: left; margin:25px 0 0 30px;}
+#main .qixi{clear: both;margin: 8px auto;margin-top: 40px;margin-bottom: 10px;position: relative;}
+#main .head{font-family: 'Microsoft YaHei';font-size: 12px;color: #999;padding-bottom: 15px;}
+#main .qixi-title{font-family: 'Microsoft YaHei';font-weight: bold;font-size: 20px;color: #333;margin-right: 15px;position: relative;bottom: 2px;}
+#main .qixiCon{width: 1220px;position: relative;top: 0;left: 0;}
+#main .qixi-list{min-height: 716px;width: 1230px;}
+#main .qixi-list li{float: left;margin:0 20px 20px 0;border: 1px solid #ccc; box-shadow:1px 1px 1px rgba(0,0,0,.2);position: relative;}
+#main .qixi-list li a img{width: 285px;height: 280px;}
+#main .price{display: block;width: 100%;color: #666;font-size: 18px;line-height: 19px;height: 19px;padding: 10px 0 5px 0;}
+#main .price em{font-size: 12px;font-family: "Microsoft YaHei";}
+#main .price div{display: inline-block;float: right;color: #666;font-size: 12px;}
+#main .text{width: 285px;overflow: hidden;height: 24px;}
+#main .text a{font-size: 16px;text-decoration: none;color: #666;font-family: "Microsoft YaHei";}
+#main .text a:hover{color: #e44715;}
+#main .qixi-footer{width: 1200px; height:144px;padding-bottom: 20px;}
+#main .qixi-footer .left{float: left;}
+#main .qixi-footer .right{float: right;}
 
-#main   .qixi{clear: both;margin: 8px auto;margin-top: 40px;margin-bottom: 10px;position: relative;}
-#main   .head{font-family: 'Microsoft YaHei';font-size: 12px;color: #999;padding-bottom: 15px;}
-#main   .qixi-title{font-family: 'Microsoft YaHei';font-weight: bold;font-size: 20px;color: #333;margin-right: 15px;position: relative;bottom: 2px;}
-#main   .qixiCon{width: 1220px;position: relative;top: 0;left: 0;}
-#main   .qixi-list{min-height: 716px;width: 1220px;}
-#main   .qixi-list li{float: left;margin:0 20px 20px 0;}
-#main   .qixi-list li a img{width: 285px;height: 280px;}
-#main   .price{display: block;width: 100%;color: #666;font-size: 18px;line-height: 19px;height: 19px;padding: 10px 0 5px 0;}
-#main   .price em{font-size: 12px;font-family: "Microsoft YaHei";}
-#main   .price div{display: inline-block;float: right;color: #666;font-size: 12px;}
-#main   .text{width: 285px;overflow: hidden;height: 24px;}
-#main   .text a{font-size: 16px;text-decoration: none;color: #666;font-family: "Microsoft YaHei";}
-#main   .text a:hover{color: #e44715;}
-#main   .qixi-footer{width: 1200px; height:144px;padding-bottom: 20px;}
-#main   .qixi-footer .left{float: left;}
-#main   .qixi-footer .right{float: right;}
+/*加入收藏*/
+.qixi-list .hideBox{width: 285px;height:40px;/*display:none;*/opacity:0;position: absolute;left: 0;top: 240px;z-index: 10;}
+.qixi-list .hideBox p{text-align: center;height: 40px;line-height: 40px;background-color: #333;}
+.qixi-list .hideBox p:hover{background-color:#E44715;}
+.qixi-list .hideBox p a{color: #fff;font-size: 13px;}
+.qixi-list .toLike{width: 161px;float: left;}
+.qixi-list .toLook{width: 123px;float: left;border-left:1px solid #ccc ;}
+.qixi-list .hideBox .toLike i {display: inline-block;width: 14px;height: 13px;background: url(img/common.png) -37px -169px;vertical-align: middle;margin-right: 6px;}
+.qixi-list .mbox{padding:0 20px 10px;width: 245px;}
+
+
+
+
