--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,11 +3,16 @@
 /*main主体部分*/
 #main{height: 7537px;float: left;width: 100%; }
 /*container 第一屏*/
-#main>.container{height: 1380px;position: relative;margin:25px 0 0 30px;}
+#main>.container{height: 1380px;width: 1200px;margin:0 auto;}
 #main .container .nav{width: 150px;margin-right: 20px;float: left;height: 460px;}
 #main .container .nav-hot>a,.nav-gift p{font-size: 16px;font-family: 'Microsoft YaHei';font-weight: bold;margin-bottom: 5px;color: #000;}
 #main .container .hot-links{width: 150px;height: 65px;border-bottom: 1px solid #ededed;padding-bottom: 15px; margin-bottom: 14px;line-height: 1.8;}
-#main .container .hot-links a{float: left;white-space: nowrap;margin-right: 20px;width: 4em;}
+#main .container .hot-links a {
+	float: left;
+	white-space: nowrap;
+	margin-right: 20px;
+	width: 4em;
+}
 #main .container .nav-gift dl dt a{padding-top: 3px;font-size: 14px; line-height: 31px;height: 31px;display: block;padding-left: 40px;background: url(img/menuImg.png) no-repeat;}
 #main .container .nav-gift dl dt a.aa{color: #fff;background:  #E44715 url(img/menuHoverImg.png) no-repeat;}
 #main .container .nav-gift .gift-arrow{border: 5px solid #e44715;border-left: 5px solid #fff;float: right;margin-top: 12px;}
@@ -39,7 +44,7 @@
 #main .container .price em{font-size: 12px;font-family: "Microsoft YaHei";}
 #main .container .price div{display: inline-block;float: right;color: #666;font-size: 12px;}
 #main .container .text{width: 285px;overflow: hidden;height: 24px;}
-#main .container .text a{font-size: 16px;text-decoration: none;color: #666;font-family: "Microsoft YaHei";}
+#main .container .text a{font-size: 16px;text-decoration: none;color: #6	66;font-family: "Microsoft YaHei";}
 #main .container .text a:hover{color: #e44715;}
 #main .container .qixi-footer{width: 1200px; height:144px;padding-bottom: 20px;}
 #main .container .qixi-footer .left{float: left;}
@@ -50,8 +55,8 @@
 #main .floor-nav .floorCon li{width: 128px;height: 46px;text-align: center;float: left;margin-right: 2px;font: 14px/46px "宋体";font-weight: bold;color: #666;cursor: pointer;}
 #main .floor-nav .floorCon li:hover,#main .floor-nav .floorCon .current{background-color: #e44715;color: #fff;}
 /*楼层主体*/
-#bigWrap{background-color: #F5F5F5;padding-left:30px ;width: 1230px;}
-#main .floor-main{background-color: #f5f5f5;padding-top: 20px;width: 100%;}
+#bigWrap{background-color: #F5F5F5;width: 100%;}
+#main .floor-main{background-color: #f5f5f5;padding-top: 20px;width: 90%;}
 #main .floor-main .container{width: 1200px;}
 #main .floorBox h3{font: bold 28px/28px "Microsoft YaHei";color: #121212;padding: 15px 0 25px;}
 #main .floorBox ul{width: 1230px;padding-bottom: 4px;}
