--- a/src/assets/sass/list.scss
+++ b/src/assets/sass/list.scss
@@ -5,12 +5,13 @@
 	background-color: #fff;
 }
 #main {
-	width: 1220px;
+	width: 100%;
 	float: left;
 	margin: 25px 0 0 30px;
 
 	.qixi {
 		clear: both;
+		width: 1270px;
 		margin: 8px auto;
 		margin-top: 40px;
 		margin-bottom: 10px;
