--- a/src/assets/sass/product.scss
+++ b/src/assets/sass/product.scss
@@ -14,7 +14,8 @@
 	position: relative;
 	z-index: 100;
 	float: left;
-	margin-left: 31px;
+	/*margin-left: 31px;*/
+	width: 100%;
 }
 .mainCon {
 	margin: 0 auto;
