--- a/pc-src/assets/sass/common.scss
+++ b/pc-src/assets/sass/common.scss
@@ -26,7 +26,9 @@ body, a {
 			display: inline-block;
 			width: 150px;
 			height: 170px;
-			background: #f4604b url(img/kadang.png) 20px 20px no-repeat;
+			/*background: #f4604b url(img/kadang.png) 20px 20px no-repeat;*/
+			background: #f5f1ee url(img/logo1.jpg) no-repeat;
+			background-size: cover;
 			margin-left: 30px;
 		}
 	}
@@ -127,6 +129,7 @@ body, a {
 			float: left;
 			margin: 20px 0 0 270px;
 			border-radius: 50px;
+			outline: none;
 		}
 
 		.search-button {
