--- a/pc-src/assets/sass/common.scss
+++ b/pc-src/assets/sass/common.scss
@@ -140,6 +140,7 @@ body, a {
 			border: 0;
 			text-indent: -999em;
 			background-position: right 0;
+			outline: none;
 
 			&:hover {
 				background-position: right -39px;
